--- a/analytics/templates/analytics/base.html
+++ b/analytics/templates/analytics/base.html
@@ -1,6 +1,9 @@
 {% extends "home/social_base.html" %}
 {% load static %}
 {% block content %}
+{% load widget_tweaks %}
+<!-- <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
+<script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script> -->
 
 <div class="view-wrapper is-full">
 
@@ -12,7 +15,7 @@
                     <i data-feather="x"></i>
                 </a>
                 <div class="avatar-wrap">
-                    <img src="https://via.placeholder.com/150x150" data-demo-src="{{request.user.profile_image.url}}" data-user-popover="0" alt="">
+                    <img src="https://via.placeholder.com/150x150" data-demo-src="{{request.user.get_profile_img}}" data-user-popover="0" alt="">
                     {% if request.user.is_verified %}
                     <div class="badge"> 
                         <i data-feather="check"></i>
@@ -83,6 +86,19 @@
 
                         </ul>
                     </div>
+
+                    <div class="separator"></div>
+                    <div class="menu-block">
+                        <ul>
+                            <li data-section="personal" {% if 'competition/list/' in request.path %} class="is-active" {% endif %}>
+                                <a href="{% url 'analytics:competition-list' %}">
+                                    <i data-feather="award"></i>
+                                    <span>Competitions</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    
                     <div class="separator"></div>
 
                     <div class="menu-block">
@@ -162,7 +178,6 @@
                         width: 100% !important;
                         max-width: 100% !important;
                     }
-                    
                 </style>
 
                 
