--- a/users/templates/users/password_reset_complete.html
+++ b/users/templates/users/password_reset_complete.html
@@ -29,7 +29,7 @@
                 </div>
                 <!--Login Form-->
                 <div class="hero-body">
-                    <div class="form-wrapper px-3">
+                    <div class="form-wrapper" style="max-width: 400px; min-width: unset !important;">
                         <h2 class="has-text-centered" style="font-size:xx-large;font-weight: bolder;color: #3396d1;">Password Reset Completed!</h2>
                         <br>
 
