--- a/analytics/templates/analytics/user_list.html
+++ b/analytics/templates/analytics/user_list.html
@@ -57,7 +57,7 @@
                 <tr>
                   <td class="is-image-cell">
                     <div class="image">
-                      <img style="width:60px; height:60px;"  src="{% if object.profile_image %}{{ object.profile_image.url }}{% endif %}" class="is-rounded">
+                      <img style="width:60px; height:60px;"  src="{{request.user.get_profile_img}}" class="is-rounded">
                     </div>
                   </td>
                   <td data-label="username">{{object.username}}</td>
