--- a/competition/templates/complist.html
+++ b/competition/templates/complist.html
@@ -4,8 +4,8 @@
 {% block content %}
 <style>
     *, *::before, *::after {
-    box-sizing:unset;
-}
+        box-sizing:unset;
+    }
     .activeBtn {
         color: white;
         border-radius: 20px;
@@ -56,7 +56,6 @@
     }
 
     .blog-post {
-        /* width: 80%; */
         max-width: 80rem;
         padding: 1rem;
         background-color: #fff;
@@ -64,19 +63,15 @@
         display: flex;
         align-items: center;
         border-radius: .8rem;
-        margin-left: 8%;
-        margin-top: 3%;
-        margin-right: 5%;
-       
+        margin-top: 2rem;
     }
 
     .blog-post_img {
         min-width: 25rem;
         max-width: 25rem;
+        padding: .7rem;
         height: 15rem;
-        transform: translateX(-.6 rem);
         position: relative;
-
     }
 
     .blog-post_img img {
@@ -94,7 +89,6 @@
         position: absolute;
         top: 0;
         left: 0;
-        box-shadow: .5rem .5rem 3rem 1px rgba(0, 0, 0, .05);
         border-radius: .8rem;
     }
 
@@ -115,27 +109,31 @@
 
     .blog-post_cta {
         display: inline-block;
-        margin-top: 4%;
+        margin-top: 1.6rem;
+    }
 
-
+    .option-tab{
+        cursor: pointer;
+        width: 8rem;
+        color: #CECECE;
+    }
+    
+    .option-tab.is-active{
+        color: #393A4F !important;
+        /* box-shadow: inset 0 -2px black; */
     }
     @media screen and (min-width:1290px) and (max-width:1500px){
         .blog-post {
-            max-width: 80rem;
-            margin-left: 1%;
-            margin-right: 2%;
-           
         }
-        
     }
 
     @media screen and (max-width:1068px) {
         .blog-post {
-            max-width: 80rem;
-            margin-left: 2%;
-            margin-right: 2%;
+            
+        }
 
-           
+        .options-nav{
+            margin-top: 1rem;
         }
 
         .blog-post_info {
@@ -154,11 +152,6 @@
 
     @media screen and (max-width:868px) {
         .blog-post {
-            max-width: 80rem;
-            margin-left: 2%;
-            margin-right: 2%;
-            margin-top: 5%;
-
         }
 
         .blog-post_info {
@@ -172,30 +165,27 @@
 
     @media screen and (max-width:768px) {
         .blog-post {
-            padding: 1.5rem;
+            padding: 1rem;
             flex-direction: column;
-            margin-left: 2%;
-            margin-right: 2%;
-            margin-top: 5%;
-            
-
-
-
         }
-
 
         .beginBtn {
             margin-left: 0%;
         }
 
         .blog-post_info {
-            margin: 1rem 1rem;
+            margin: unset;
+            width: 100%;
         }
 
         .blog-post_img {
             max-width: 100%;
             min-width: 100%;
             transform: translate(0, -.5rem);
+        }
+
+        .option-tab{
+            font-size: .75rem;
         }
     }
 </style>
@@ -204,41 +194,32 @@
 
     <!-- /partials/global/options-nav/friends-options-nav.html -->
     <div class="options-nav no-shadow">
-        <div class="container is-fluid">
-            <div class="nav-inner is-friends">
-
-
-
-                <div class="option-tabs is-friends">
-                    <a class="option-tab is-active" data-tab="all-friends">
-                        <span>ACTIVE</span>
-                    </a>
-                    <a class="option-tab" data-tab="starred-friends">
-                        <span>LATE SUBMISSION</span>
-                    </a>
-                    <a class="option-tab" data-tab="new-friends">
-                        <span>CLOSED</span>
-                    </a>
-                    <div class="option-naver"></div>
+        <div class="nav-inner is-friends">
+            <div class="option-tabs d-flex justify-content-start" style="width: 30rem;overflow-x: auto;">
+                <div class="option-tab is-active" data-tab="all-friends">
+                    ACTIVE
                 </div>
-
+                <div class="option-tab" data-tab="starred-friends" style="white-space: nowrap;">
+                    LATE SUBMISSION
+                </div>
+                <div class="option-tab" data-tab="new-friends">
+                    CLOSED
+                </div>
+                <div class="option-naver"></div>
             </div>
         </div>
     </div>
 
 
 
-    <div id="friends-page" class="friends-wrapper main-container">
-
+    <div id="friends-page" class="friends-wrapper main-container mt-4">
         <!--First tab-->
-        <div id="all-friends" class="card-row-wrap is-active">
-            {% for list in list %}
+        <div id="all-friends" class="sec-row-wrap is-active">
+        {% for list in list %}
             {%if list.status == "Active" %}
-
             <div class="blog-post">
                 <div class="blog-post_img">
                     <img src="{{list.image.url}}" alt="">
-
                 </div>
                 <div class="blog-post_info">
                     <a href="{% url 'Competion:detail' list.id %}">
@@ -248,30 +229,23 @@
 
                     <h3 class="activeBtn blog-post_cta" style="color: white;"> {{list.status}}</h3>
 
-
                     <h3 class="beginBtn blog-post_cta" style="color:#636369;">{{list.level}}</h3>
-
-
 
                 </div>
             </div>
-
-        </div>
-        {%endif%}
-
-
+            {%endif%}
         {% endfor %}
+        </div>
 
         <!--Friend-->
         <!--Second tab-->
-        <div id="starred-friends" class="card-row-wrap ">
-            {% for list in list %}
+        <div id="starred-friends" class="sec-row-wrap" style="display: none;">
+        {% for list in list %}
             {%if list.status == "Late Submission" %}
             <div class="conatiner">
                 <div class="blog-post">
                     <div class="blog-post_img">
                         <img src="{{list.image.url}}" alt="">
-
                     </div>
                     <div class="blog-post_info">
                         <a href="{% url 'Competion:detail' list.id %}">
@@ -279,26 +253,24 @@
                         </a>
                         <p class="blog-post_text">{{ list.overview | safe |truncatewords:30 }}</p>
 
-                        <h3 class="lateBtn blog-post_cta" style="color: white;"> {{list.status|cut:" "}}</h3>
+                        <h3 class="lateBtn blog-post_cta px-4" style="color: white;"> {{list.status}}</h3>
 
                         <h3 class="beginBtn blog-post_cta" style="color:#636369;">{{list.level}}</h3>
 
                     </div>
                 </div>
             </div>
-        </div>
-        {%endif%}
-
-
+            {%endif%}
         {% endfor %}
-        <div id="new-friends" class="card-row-wrap ">
-            {% for list in list %}
+        </div>
+
+        <div id="new-friends" class="sec-row-wrap" style="display: none;">
+        {% for list in list %}
             {%if list.status == "Closed" %}
             <div class="conatiner">
                 <div class="blog-post">
                     <div class="blog-post_img">
                         <img src="{{list.image.url}}" alt="">
-
                     </div>
                     <div class="blog-post_info">
                         <a href="{% url 'Competion:detail' list.id %}">
@@ -309,19 +281,36 @@
                         <h3 class="activeBtn blog-post_cta" style="color: white;"> {{list.status}}</h3>
 
                         <h3 class="beginBtn blog-post_cta" style="color:#636369;">{{list.level}}</h3>
-
                     </div>
                 </div>
             </div>
-        </div>
-        {%endif%}
-
-
+            {%endif%}
         {% endfor %}
-
-
+        </div>
     </div>
 </div>
-
-
+<script>
+const optionTabs = document.querySelectorAll('.option-tab')
+const optionNaver = document.querySelector('.option-naver')
+const secEls = document.querySelectorAll('.sec-row-wrap')
+console.log(optionTabs, secEls)
+optionTabs?.forEach((tab)=>{
+    tab.addEventListener('click', (e)=>{
+        optionTabs?.forEach((t)=>{
+            t.classList.remove('is-active')
+        })
+        secEls?.forEach((sec)=>{
+            sec.classList.remove('is-active')
+            sec.style.display = 'none';
+        })
+        tab.classList.add('is-active')
+        let secId = tab.getAttribute('data-tab')
+        const activeSec = document.getElementById(secId)
+        activeSec.classList.add('is-active')
+        activeSec.style.display = 'block'
+        let num = [...optionTabs].indexOf(tab)
+        optionNaver.style.marginLeft = `${num * 33.33}%`;
+    })
+})
+</script>
 {% endblock %}
