--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -29,12 +29,12 @@
                 </div>
                 <!--Login Form-->
                 <div class="hero-body">
-                    <div class="form-wrapper">
+                    <div class="form-wrapper" style="max-width: 400px; min-width: unset !important;">
                         <center>
                             <h2 style="font-size:xx-large;font-weight: bolder;   color: #3396d1;">Reset Password</h2>
                         </center><br>
 
-                        <p>Forgotten your password? Enter your email address below, and we'll email instructions for
+                        <p>Enter your email address below, and we'll email instructions for
                             setting a new one.</p><br>
 
 
