--- a/users/templates/users/password_reset_confirm.html
+++ b/users/templates/users/password_reset_confirm.html
@@ -29,23 +29,36 @@
                 </div>
                 <!--Password Rest Confirm Form-->
                 <div class="hero-body">
-                    <div class="form-wrapper px-3">
+                    <div class="form-wrapper" style="max-width: 400px; min-width: unset !important;">
                         <h2 class="has-text-centered" style="font-size:xx-large;font-weight: bolder;color: #3396d1;">Enter New Password</h2>
                         <br>
 
                         <p>After submitting, your new password will be used for verifying your credentials from there on.</p><br>
                         <!--Form-->
-                        <form method="POST" class="login-form">
+                        <form method="POST" id="resetPasswordForm" class="login-form">
                             {% csrf_token %}
-                            <div class="field" style="padding-bottom: 20px;">
+                            <div class="field">
                                 <div class="control">
-                                    <input name="password" class="input password-input" type="password" placeholder="New Password" required>
+                                    <input name="new_password1" class="input password-input" type="password" placeholder="New Password" required>
+                                    <div class="input-icon">
+                                        <i data-feather="lock"></i>
+                                    </div>
+                                </div>
+                                
+                            </div>
+                            <div class="field">
+                                <div class="control">
+                                    <input name="new_password2" class="input password-input" type="password" placeholder="Confirm Password" required>
                                     <div class="input-icon">
                                         <i data-feather="lock"></i>
                                     </div>
                                 </div>
                             </div>
-                            <div class="field">
+                            <span style="color: crimson;">
+                                {{form.new_password1.errors}}
+                                {{form.new_password2.errors}}
+                            </span>
+                            <div class="field mt-5">
                                 <div class="control">
                                     <button type="submit" class="button is-solid primary-button raised is-rounded is-fullwidth">Change Password</button>
                                 </div>
@@ -57,5 +70,4 @@
         </div>
     </div>
 </div>
-
 {% endblock %}
