--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -29,11 +29,15 @@
                 </div>
                 <!--Login Form-->
                 <div class="hero-body">
-                    <div class="form-wrapper px-3">
+                    <div class="form-wrapper" style="max-width: 450px; min-width: unset !important;">
                         <h2 class="has-text-centered" style="font-size:xx-large;font-weight:bolder;color:#3396d1;">Password Reset Sent!</h2>
                         <br>
                        
-                        <p>We've emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.<br>If you don't receive an email, please make sure you've entered the address you are registered with, and check your spam folder.</p><br>
+                        <p>We've emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.
+                            <br>
+                            If you don't receive an email, please make sure you've entered the address you are registered with, and check your spam folder.
+                        </p>
+                        <br>
 
                         <div class="mt-4 has-text-centered">
                             <a class="button is-solid primary-button is-halfwidth" href="{% url 'home:home' %}" style="font-size: 1rem;">
