--- a/analytics/templates/analytics/plan_list.html
+++ b/analytics/templates/analytics/plan_list.html
@@ -6,6 +6,9 @@
 <h2 class="has-text-centered">
     Plan List
 </h2>
+
+<a href="{% url 'analytics:plan-create' %}" class="button is-solid accent-button" style="margin-left: auto;">Add Plan</a>
+
 {% endblock title %}
 
 {% block data %}
