--- a/chat/templates/chat/modal.html
+++ b/chat/templates/chat/modal.html
@@ -133,7 +133,8 @@
                                 </div>
                             </li>
 
-                            <li class="list-group-item">
+                            {% comment %}
+                            <!-- <li class="list-group-item">
                                 <div class="row align-items-center gx-6">
                                     <div class="col">
                                         <h5>Phone</h5>
@@ -146,7 +147,8 @@
                                         </div>
                                     </div>
                                 </div>
-                            </li>
+                            </li> -->
+                            {% endcomment %}
                         </ul>
                         <!-- List  -->
 
@@ -243,7 +245,8 @@
                                 </div>
                             </li>
 
-                            <li class="list-group-item">
+                            {% comment %}
+                            <!-- <li class="list-group-item">
                                 <div class="row align-items-center gx-6">
                                     <div class="col">
                                         <h5>Phone</h5>
@@ -256,7 +259,8 @@
                                         </div>
                                     </div>
                                 </div>
-                            </li>
+                            </li> -->
+                            {% endcomment%}
                         </ul>
                         <!-- List -->
 
@@ -497,7 +501,9 @@
                                 <div class="row align-items-center gx-6">
                                     <div class="col">
                                         <h5 class="mb-4">Members</h5>
-                                        <p id="receiver_phone"></p>
+                                        {% comment %}
+                                        <!-- <p id="receiver_phone"></p> -->
+                                        {% endcomment %}
                                     </div>
 
                                     <div class="col-auto mb-4">
