--- a/users/templates/users/all_users.html
+++ b/users/templates/users/all_users.html
@@ -65,7 +65,7 @@
                                             <!-- Friend -->
                                             <div class="column is-6">
                                                 <div class="friend-small-card">
-                                                    <img src="{{ user.profile_image.url }}" data-demo-src="{{ user.profile_image.url }}" data-user-popover="9" alt="">
+                                                    <img src="{{ user.get_profile_img }}" data-demo-src="{{ user.get_profile_img }}" data-user-popover="9" alt="">
                                                     <div class="meta">
                                                         <span>{{ user.username }}</span>
                                                         <span>{{ user.get_full_name }}</span>
