--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -24,7 +24,7 @@
                 <!--Logo-->
                 <div class="logo-wrap">
                     <div class="wrap-inner">
-                        <img src="{% static 'social_assets/img/logo/friendkit-white.svg' %}" alt="">
+                        <img src="{% static 'images/logo/png.png' %}" style="width: 100px;" alt="">
                     </div>
                 </div>
                 <!--Login Form-->
