--- a/analytics/templates/analytics/plan_create.html
+++ b/analytics/templates/analytics/plan_create.html
@@ -3,6 +3,8 @@
 {% load static %} 
 
 {% block title %}
+{{form.media}}
+{% load widget_tweaks %}
 <h2 class="has-text-centered">
     {% if 'create' in request.path %}
         Plan Create
@@ -26,15 +28,30 @@
     .control.has-icon .input {
         padding-left: 6px !important;
     }
-</style>
 
+    .form-control{
+        padding: 0.5em;
+        width: 100%;
+        border: 1px solid #e7e7e7;
+    }
+
+    .select {
+        padding: 0em 1em;
+        border: 1px solid #e7e7e7;
+    }
+
+    small{
+      color: red;
+    }
+</style>
+{% with 'ckeditorwidget,textarea' as widget_list %}
     <div class="settings-form">
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="columns is-multiline">
 
                 {% for field in form %}
-                <div class="column {% if field.label == 'Description' %} is-12 {% else %} is-6 {% endif %}">
+                <div class="column {% if field|widget_type in widget_list %} is-12 {% else %} is-6 {% endif %}">
                     <div class="field field-group">
                        
                         <div class="control has-icon">
@@ -59,5 +76,5 @@
             </div>
         </form>
     </div>
-
+{% endwith %}
 {% endblock data %}
