--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -24,18 +24,16 @@
                 <!--Logo-->
                 <div class="logo-wrap">
                     <div class="wrap-inner">
-                        <img src="{% static 'social_assets/img/logo/friendkit-white.svg' %}" alt="">
+                        <img src="{% static 'images/logo/png.png' %}" style="width: 100px;" alt="">
                     </div>
                 </div>
                 <!--Login Form-->
                 <div class="hero-body">
                     <div class="form-wrapper" style="max-width: 450px; min-width: unset !important;">
-                        <h2 class="has-text-centered" style="font-size:xx-large;font-weight:bolder;color:#3396d1;">Password Reset Sent!</h2>
+                        <h2 class="has-text-centered" style="font-size: 25px;font-weight: 500;color:#3396d1;">Confimation E-mail Sent.</h2>
                         <br>
                        
-                        <p>We've emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.
-                            <br>
-                            If you don't receive an email, please make sure you've entered the address you are registered with, and check your spam folder.
+                        <p>A confirmation email sent to your register email id with instructions to reset your password.
                         </p>
                         <br>
 
