--- a/users/templates/users/user_personal_info.html
+++ b/users/templates/users/user_personal_info.html
@@ -52,8 +52,9 @@
                                                         </div>
                                                     </div>
                                                     <!--Field-->
+                                                    {% comment %}
                                                     {% if not user_friend %}
-                                                    <div class="field field-group">
+                                                    <!-- <div class="field field-group">
                                                         <label>{{form.phone_number.label}}</label>
                                                         <div class="control has-icon">
                                                             <input type="number" class="input is-fade" {% if user_friend %} disabled {% endif %} value="{{form.phone_number.value}}" name="{{form.phone_number.name}}">
@@ -61,8 +62,9 @@
                                                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
                                                             </div>
                                                         </div>
-                                                    </div>
+                                                    </div> -->
                                                     {% endif %}
+                                                    {% endcomment %}
                                                 </div>
 
                                                 <div class="column is-12">
